# wm-agents-claude

./: .gitignore  BLUEPRINT.md  Dockerfile  README.md  WORLDMONITOR_BLUEPRINT.md  WORLDMONITOR_DELIVERABLES.md  WORLDMONITOR_ENHANCED_UI.md  WORLDMONITOR_FIXES.md  docker-compose.yml  wm-agents_claude-prompts.md  worldmonitor-cot-workflow.mmd  worldmonitor-ui-analysis.md  ziM2COae
.github/workflows/: ci.yml  dist.yml
worldmonitor-core/: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  railway.toml
worldmonitor-core/.github/workflows/: ci.yml
worldmonitor-core/src/: main.rs
worldmonitor-core/src/api/: alerts.rs  billing.rs  brief.rs  geo.rs  intelligence.rs  mod.rs  sse.rs  sync.rs  user.rs
worldmonitor-core/src/cache/: mod.rs
worldmonitor-core/src/core/: mod.rs
worldmonitor-core/src/db/: mod.rs
worldmonitor-core/src/models/: mod.rs
worldmonitor-core/static/: app.js  index.html
worldmonitor-ui-components/: .env.local.example  generate-icons.js  middleware.ts  next.config.js  package-lock.json  package.json  vercel.json
worldmonitor-ui-components/app/: layout.tsx  loading.tsx  page.tsx
worldmonitor-ui-components/app/api/intelligence/: route.ts
worldmonitor-ui-components/app/api/stream/: route.ts
worldmonitor-ui-components/app/login/: page.tsx
worldmonitor-ui-components/app/onboarding/: page.tsx
worldmonitor-ui-components/components/auth/: AuthGate.tsx  LoginPage.tsx
worldmonitor-ui-components/components/dashboard/: DashboardClient.tsx  GlobalLiveFeed.tsx  StatusBar.tsx  index.ts
worldmonitor-ui-components/components/map/: Globe.tsx  LayerControl.tsx  WorldMap.css  WorldMap.tsx  index.ts
worldmonitor-ui-components/components/onboarding/: OnboardingFlow.tsx
worldmonitor-ui-components/components/ui/: Badge.tsx  Skeleton.tsx  Tooltip.tsx  WelcomeTour.tsx  index.ts
worldmonitor-ui-components/hooks/: index.ts  useEventStream.ts  useIntelligence.ts
worldmonitor-ui-components/lib/: api.ts  auth.ts  index.ts  seed-events.ts  user.ts  utils.ts
worldmonitor-ui-components/public/: manifest.json  sw.js
worldmonitor-ui-components/public/.well-known/: assetlinks.json
worldmonitor-ui-components/styles/: globals.css
