[package]
name = "worldmonitor-core"
version = "0.1.0"
edition = "2021"
authors = ["WorldMonitor Team"]
description = "Lean, edge-native OSINT intelligence platform"
license = "MIT"

[dependencies]
# Web framework
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "compression-full"] }
tower-http = { version = "0.5", features = ["cors", "compression-full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for external APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database - SQLite with sqlx
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# In-memory cache
dashmap = "5.5"

# URL encoding (used in core/mod.rs for GDELT feed URLs)
urlencoding = "2.1"

# Zero-dependency XML parser for direct RSS/Atom feed ingestion
roxmltree = "0.19"

# Kafka-style broadcast: converts tokio broadcast channels into async Streams
# Used by the SSE /api/stream endpoint
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "worldmonitor"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
